--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
 aiohttp==3.7.4.post0
 anyio==3.3.4
+asgiref==3.4.1
 async-timeout==3.0.1
 attrs==21.2.0
+certifi==2021.10.8
 chardet==4.0.0
+charset-normalizer==2.0.7
+click==8.0.3
 discord==1.7.3
-discord.py==1.7.3
+discord.py==2.0.0a3575+g45d498c1
 fastapi==0.70.0
+h11==0.12.0
 idna==3.3
 multidict==5.2.0
 pydantic==1.8.2
+requests==2.26.0
 sniffio==1.2.0
 starlette==0.16.0
 typing-extensions==3.10.0.2
+urllib3==1.26.7
+uvicorn==0.15.0
 yarl==1.7.2
