--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ chardet==4.0.0
 charset-normalizer==2.0.7
 click==8.0.3
 discord==1.7.3
-discord.py==2.0.0a3575+g45d498c1
+discord.py==1.7.3
 fastapi==0.70.0
 h11==0.12.0
 idna==3.3
